# kingpin

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  python.yaml
src/cli/: chat.py  load.py  lst.py  main.py
src/kingpin/: __init__.py  mcp.py  models.py  pin.py
src/lib/: lookup.py  pins.py  pins_test.py
src/pinctl/: __init__.py
